// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots common/ShowHideLabel Basic 1`] = `
<div>
  <div
    class="MuiBox-root css-1v5z18m"
  >
    <div
      class="MuiBox-root css-k008qs"
    >
      <label
        aria-expanded="false"
        id="label-id"
        style="word-break: break-all; white-space: normal;"
      >
        This is a placeholder label text that is many characters long. It is meant to be used as a temporary label for a UI element until the actual label is available. The text is long enough to fill up the space allocated for the label and provide a realistic pr
        …
        <button
          aria-controls="label-id"
          arial-label="Expand"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-z81te2-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span />
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots common/ShowHideLabel Empty 1`] = `
<div>
  <div
    class="MuiBox-root css-1v5z18m"
  />
</div>
`;

exports[`Storyshots common/ShowHideLabel Expanded 1`] = `
<div>
  <div
    class="MuiBox-root css-1v5z18m"
  >
    <div
      class="MuiBox-root css-13o7eu2"
    >
      <label
        aria-expanded="true"
        id="my-label"
        style="word-break: break-all; white-space: normal;"
      >
        This is a placeholder label text that is many characters long. It is meant to be used as a temporary label for a UI element until the actual label is available. The text is long enough to fill up the space allocated for the label and provide a realistic preview of how the label will look in the final UI. You can replace this text with the actual label text once it is available. This will ensure that the UI looks complete and professional even during the development phase. Thank you for using this placeholder text!
        <button
          aria-controls="my-label"
          arial-label="Collapse"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-z81te2-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span />
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots common/ShowHideLabel Short Text 1`] = `
<div>
  <div
    class="MuiBox-root css-1v5z18m"
  >
    <div
      class="MuiBox-root css-k008qs"
    >
      <label
        id="my-label2"
        style="word-break: break-all; white-space: normal;"
      >
        Short text
      </label>
    </div>
  </div>
</div>
`;
